fix: removed letter spacings

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,6 @@
 
 html {
   font-family: 'Open Sans', sans-serif;
-  letter-spacing: 0.5px;
 }
 
 body {
